--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "ember-text-field": "billysbilling/ember-text-field#~1.0.0",
-    "i18n-context": "billysbilling/i18n-context#~1.0.0"
+    "ember-text-field": "billysbilling/ember-text-field#>=1.0 <2.0",
+    "i18n-context": "billysbilling/i18n-context#>=1.0 <2.0"
   }
 }
